[package]
name = "js"
version = "0.1.0"
authors = ["Michael Oates <michael@oates.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
anyhow="1.0.37"
log={ version = "0.4.14" }
pretty_env_logger="0.4.0"
logos = "0.12.0"