[package]
name = "compiler"
version = "0.1.0"
authors = ["Michael Oates <michael@oates.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
#debug = true

[features]
default = []
eval = []

[dependencies]
log={ version = "0.4.14" }
logos = "0.12.0"
instruction_set = { path = "../instruction_set" }
anyhow = "1.0.38"