[package]
name = "glide_runtime"
version = "0.1.0"
authors = ["Michael Oates <michael@oates.dev>"]
edition = "2021"
license = "MIT"
categories = ["js"]
description = "GlideJS Runtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
eval = ["glide_compiler"]
debugging = []
cost_limits = []
runtime_time = ["chrono"]

[dependencies]
anyhow = "1.0.38"
builtin = { path = "../builtin" }
instruction_set = { path = "../instruction_set" }
colored = "2.0.0"
log={ version = "0.4.14" }
rand = "0.8.3"
ahash = "0.7.2"
better_any = "0.2.0"
stash = "0.1.5"
chrono = { optional = true, version = "0.4.24" }

glide_compiler = { optional = true, path = "../compiler", features=["eval"] }
