[package]
name = "test_262"
version = "0.1.0"
authors = ["Michael Oates <michael@oates.dev>"]
edition = "2018"

[dependencies]
compiler = { path = "../compiler", features=["eval"] }
virtual_machine = { path = "../virtual_machine", features=["eval"] }
anyhow = "1.0.38"
colored = "2.0.0"
log = { version = "0.4", features = ["max_level_trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.64"
clap = "2.33.3"