[package]
name = "virtual_machine"
version = "0.1.0"
authors = ["Michael Oates <michael@oates.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
eval = ["compiler"]

[dependencies]
anyhow = "1.0.38"
builtin = { path = "../builtin" }
instruction_set = { path = "../instruction_set" }
colored = "2.0.0"
log={ version = "0.4.14" }
rand = "0.8.3"
ahash = "0.7.2"

compiler = { optional = true, path = "../compiler", features=["eval"] }